--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@baleada/tailwind-config-utils": "^0.3.0",
     "@baleada/tailwind-linear-numeric": "^0.8.8",
     "@baleada/tailwind-theme": "^0.3.0",
+    "@fontsource/inconsolata": "^4.1.1",
     "@tailwindcss/forms": "^0.2.1",
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.0-rc.1",
